Team dropdown spacing fix

--- a/styles/components/_team.scss
+++ b/styles/components/_team.scss
@@ -15,7 +15,7 @@
       justify-content: space-between;
       -webkit-tap-highlight-color: transparent; /* Prevent blue highlight on mobile devices */
       user-select: none;
-
+      border-bottom: 1px solid transparent;
       > svg {
         margin-left: 10px;
         transition: transform 250ms ease-in-out;
